--- a/src/report/stv-report.html
+++ b/src/report/stv-report.html
@@ -182,9 +182,9 @@
             color: #0068cc !important;
         }
 
-        .redirection-btn{
-          margin:10px;
-          max-width: 300px;
+        .redirection-btn {
+            margin: 10px;
+            max-width: 300px;
         }
     }
     </style>
@@ -198,17 +198,15 @@
             </div>
         </div>
         <div id="up" on-click="handleUp" class="button stv-btn stv-btn-shdw" title="Go top"><i class="fa fa-arrow-up"></i></div>
-        <div hidden$="{{hideJobInformation}}">
+        <div>
             <div id="jobInfo" class="section">Job Information</div>
-            <div>
-                <div class="job-name"><span>Name:</span><span>{{job.name}}</span></div>
-                <div class="job-desc"><span>Description:</span><span>{{job.description}}</span></div>
-                <div class="job-tool"><span>Tool:</span><span>{{job.tool}}</span></div>
-                <!-- <div class="output">{{job}}</div> -->
+            <div style="margin-left:30px;">
+                <div class="param"><span class="key">Name:</span><span class="val">{{job.name}}</span></div>
+                <div class="param"><span class="key">Description:</span><span class="val">{{job.description}}</span></div>
+                <div class="param"><span class="key">Tool:</span><span class="val">{{job.tool}}</span></div>
             </div>
-
             <div id="inputParamsHeader" class="section">Job Arguments</div>
-            <div id="inputParams"></div>
+            <div id="inputParams" style="margin-left: 30px;"></div>
             <br>
         </div>
         <div id="main"></div>
@@ -224,11 +222,6 @@
                 fileNameMap: {
                     type: Object
                 },
-                hideJobInformation: {
-                    type: Boolean,
-                    value: false,
-                    reflectToAttribute: true
-                },
                 tocFixed: {
                     type: Boolean,
                     value: false,
@@ -243,7 +236,7 @@
                     image: 'fa-image',
                     table: 'fa-th',
                     boxplot: 'fa-bar-chart',
-                    redirection:'fa-forward'
+                    redirection: 'fa-forward'
                 }
             },
             handleUp: function() {
@@ -265,39 +258,32 @@
                         this.$.inputParams.removeChild(this.$.inputParams.firstChild);
                     }
 
-                    if (this.hideJobInformation != true) {
+                    // if (this.hideJobInformation != true) {
 
-                        var jobInfoElem = document.createElement('a');
-                        jobInfoElem.innerHTML = '<i class="fa fa-caret-right"></i><span>Job information</span>';
-                        jobInfoElem.style.fontWeight = "bold";
-                        jobInfoElem.href = "#jobInfo";
-                        jobInfoElem.classList.add('outline-line');
-                        Polymer.dom(this.$.outlineContent).appendChild(jobInfoElem);
+                    // var inputParamsElem = document.createElement('a');
+                    // inputParamsElem.innerHTML = '<i class="fa fa-caret-right"></i><span>Job Arguments</span>';
+                    // inputParamsElem.style.fontWeight = "bold";
+                    // inputParamsElem.href = "#inputParamsHeader";
+                    // inputParamsElem.classList.add('outline-line');
+                    // Polymer.dom(this.$.outlineContent).appendChild(inputParamsElem);
 
-                        var inputParamsElem = document.createElement('a');
-                        inputParamsElem.innerHTML = '<i class="fa fa-caret-right"></i><span>Job Arguments</span>';
-                        inputParamsElem.style.fontWeight = "bold";
-                        inputParamsElem.href = "#inputParamsHeader";
-                        inputParamsElem.classList.add('outline-line');
-                        Polymer.dom(this.$.outlineContent).appendChild(inputParamsElem);
-
-                        for (var key in this.job.options) {
-                            var option = this.job.options[key];
-                            var elem = document.createElement("div");
-
-                            elem.classList.add("input-param");
-                            var keySpan = document.createElement("span");
-                            var valueSpan = document.createElement("span");
-
-                            keySpan.innerHTML = key + ": ";
-                            valueSpan.innerHTML = option.value ? option.value : "";
-
-                            elem.appendChild(keySpan);
-                            elem.appendChild(valueSpan);
-                            Polymer.dom(this.$.inputParams).appendChild(elem);
-
-                        }
-                    }
+                    // for (var key in this.job.options) {
+                    //     var option = this.job.options[key];
+                    //     var elem = document.createElement("div");
+                    //
+                    //     elem.classList.add("input-param");
+                    //     var keySpan = document.createElement("span");
+                    //     var valueSpan = document.createElement("span");
+                    //
+                    //     keySpan.innerHTML = key + ": ";
+                    //     valueSpan.innerHTML = option.value ? option.value : "";
+                    //
+                    //     elem.appendChild(keySpan);
+                    //     elem.appendChild(valueSpan);
+                    //     Polymer.dom(this.$.inputParams).appendChild(elem);
+                    //
+                    // }
+                    // }
 
                     var files = [];
                     SteviaManager.getPlainFolderFiles(me.job.folder._id, function(files) {
@@ -338,14 +324,26 @@
                 });
             },
             processReportFile: function(fileContent) {
+
                 var parser = new DOMParser();
                 var reportXML = parser.parseFromString(fileContent, "text/xml");
                 var inputParamsEl = reportXML.querySelector('input-params');
                 var outputParamsEl = reportXML.querySelector('output-params');
                 var outputParams = outputParamsEl.childNodes;
+                var inputParams = inputParamsEl.childNodes;
+                
+                if (inputParams.length == 0) {
+                    this.$.inputParamsHeader.hidden = true;
+                } else {
+                    this._processParams(inputParams, this.$.inputParams);
+                }
 
-                for (var i = 0; i < outputParams.length; i++) {
-                    var outEl = outputParams[i];
+                this._processParams(outputParams, this.$.main);
+
+            },
+            _processParams: function(params, renderEl) {
+                for (var i = 0; i < params.length; i++) {
+                    var outEl = params[i];
                     if (outEl.tagName != null) {
                         var functionPath = '_' + outEl.tagName + 'Tag';
                         if (this[functionPath] != null) {
@@ -359,7 +357,8 @@
                                 functionPath = '_' + newOutEl.tagName + 'Tag';
                                 outEl = newOutEl;
                             }
-                            this[functionPath](outEl);
+                            var el = this[functionPath](outEl, renderEl);
+                            this._addTag(el, outEl, renderEl);
                         } else {
                             console.log('* ' + outEl.tagName + ' * tag function renderer is not defined');
                         }
@@ -367,14 +366,14 @@
                 }
 
             },
-            _addTag: function(el, outEl) {
+            _addTag: function(el, outEl, renderEl) {
                 el.setAttribute("id", "stvReportId_" + this.count);
                 el.classList.add(outEl.tagName);
 
                 var level = parseInt(outEl.getAttribute("level"));
                 level = (isNaN(level)) ? 0 : level;
                 el.style.marginLeft = level * 40 + "px";
-                Polymer.dom(this.$.main).appendChild(el);
+                Polymer.dom(renderEl).appendChild(el);
                 this._addOutlineEntry(outEl, "stvReportId_" + this.count);
                 this.count++;
             },
@@ -415,7 +414,6 @@
                             el.style.marginLeft = level * 10 + "px";
                             i.classList.add("fa", 'fa-caret-right');
                             break;
-
                         default:
                     }
                     var text = document.createElement('span');
@@ -433,7 +431,8 @@
             _sectionTag: function(outEl) {
                 var el = document.createElement('div');
                 el.innerHTML = outEl.getAttribute('title');
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
 
             _downloadTag: function(outEl) {
@@ -450,11 +449,12 @@
 
                 el.appendChild(i);
                 el.appendChild(a);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _redirectionTag: function(outEl) {
                 var tool = outEl.getAttribute('tool');
-                
+
                 outEl.setAttribute("title", stv.utils.titleCase(tool));
                 var el = document.createElement('div');
                 el.classList.add("stv-btn", "stv-btn-shdw", "redirection-btn")
@@ -467,7 +467,8 @@
 
                 el.appendChild(i);
                 el.appendChild(text);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _paramTag: function(outEl) {
                 // <param key='Decomposed paths' value='FALSE'></param>
@@ -483,7 +484,8 @@
 
                 el.appendChild(keyEl);
                 el.appendChild(valEl);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _messageTag: function(outEl) {
                 // <message text='...'></message>
@@ -498,7 +500,8 @@
                 el.appendChild(i);
                 el.appendChild(span);
 
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _imageTag: function(outEl) {
                 // <image title='Heatmap' file='paths_heatmap.png'></image>
@@ -520,7 +523,8 @@
                 el.appendChild(i);
                 el.appendChild(a);
                 el.appendChild(img);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _boxplotTag: function(outEl) {
                 var me = this;
@@ -567,7 +571,8 @@
                 el.appendChild(a);
                 el.appendChild(chartDiv);
                 // el.appendChild(img);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _createBoxPlotChart: function(chartDiv, title, data) {
                 var me = this;
@@ -704,7 +709,8 @@
                 el.appendChild(i);
                 el.appendChild(a);
                 el.appendChild(table);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _pathwayViewerTag: function(outEl) {
                 var el = document.createElement('div');
@@ -721,7 +727,8 @@
                 // pw.style.boxShadow = "0px 0px 4px 0px rgba(0, 0, 0, 0.2)";
 
                 el.appendChild(pw);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _goViewerTag: function(outEl) {
                 var el = document.createElement('div');
@@ -735,7 +742,8 @@
                 gw.set('sessionFileNameMap', this.fileNameMap);
 
                 el.appendChild(gw);
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
 
             _htmlTag: function(outEl) {
@@ -747,7 +755,8 @@
                     var doc = parser.parseFromString(content, "text/html");
                     me._processHTML(doc, el);
                 });
-                this._addTag(el, outEl);
+                // this._addTag(el, outEl);
+                return el;
             },
             _processHTML: function(doc, outEl) {
                 var indexStyle = doc.querySelector('style');
