--- a/src/report/stv-report.html
+++ b/src/report/stv-report.html
@@ -238,7 +238,7 @@
                     file: 'fa-file',
                     message: 'fa-comment-o',
                     image: 'fa-image',
-                    table: 'fa-th',
+                    table: 'fa-table',
                     boxplot: 'fa-bar-chart',
                     redirection: 'fa-forward',
                     redirection: 'fa-forward',
@@ -684,7 +684,7 @@
 
                 var el = document.createElement('div');
                 var i = document.createElement('i');
-                i.classList.add('fa', 'fa-th');
+                i.classList.add('fa', this.iconMap['table']);
 
                 var a = document.createElement('a');
                 a.innerHTML = outEl.getAttribute('title');
