--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -255,6 +255,7 @@
             }
         },
         handleUpload: function() {
+          debugger
             var file = this.$.fileInput.files[0];
             if (file == null) {
                 this.message = "No file selected."
