Minor css fixes.

--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -15,7 +15,7 @@
         #bar {
             box-sizing: border-box;
             background-color: var(--light-secondary-color);
-            padding: 3px 7px;
+            padding: 3px 22px 3px 7px;
             border-bottom: 1px solid var(--divider-color);
         }
 
@@ -29,7 +29,7 @@
 
         #content.list {
             height: calc(100% - 55px);
-            overflow-y: auto;
+            overflow-y: scroll;
             overflow-x: hidden;
         }
 
@@ -49,10 +49,11 @@
 
         .name {}
 
-        .creationDate {
+        .date {
             color: #444;
             width: 80px;
             text-align: center;
+            margin-left:20;
         }
 
         .size {
